--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -9,6 +9,8 @@
     "font-awesome": "4.2",
     "bootstrap": "3.x",
     "serviceworkerware": "^0.3.0",
-    "localforage": "^1.4.2"
+    "localforage": "^1.4.2",
+    "intro.js": "^2.2.0",
+    "angular-intro.js": "^2.0.3"
   }
 }
