--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -7,7 +7,7 @@
   ],
   "icons": [
     {
-      "src": "launcher-icon-4x.png",
+      "src": "img/launcher-icon-4x.png",
       "sizes": "192x192",
       "type": "image/png",
       "density": 4.0
