--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -7,10 +7,19 @@
   ],
   "icons": [
     {
+      "src": "images/launcher-icon-2x.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "images/launcher-icon-3x.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
       "src": "images/launcher-icon-4x.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "density": 4.0
+      "type": "image/png"
     }
   ],
   "start_url": "/",
